welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: Boolean does not take parameters
	if (isMorning() && !(isMom()) && !(isAsSleep())) {
                     ^answerCell:5: error: not found: value isAsSleep
	else if (isAsSleep()) {
                 ^