welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if (isMorning() && !(isMom()) && !(isAsSleep())) {
		return false;
	}
	else if (isAsSleep()) {
		return false;
	}
	else true;
}
